# mouse-presets

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: defs.c.F9C26B205605A5D3.idx  defs.h.CEC4581E61A1BE72.idx  layer-shell.c.3DEE59F69FA2A61E.idx  layer-shell.h.69F3080A01A32B8B.idx  layer-shell.h.7F2CB7045DEE51CB.idx  main.c.33326E4E0ED03D95.idx  main.h.57198272873FF811.idx  render.c.CF47C5F633E4CF9B.idx  render.h.7A5949514270BD03.idx  wayland.c.43CE4EA3F9B2B375.idx  wayland.h.8147373B20A7D49B.idx  xdg-shell.c.A9CCC029C5D813E9.idx
src/: defs.c  defs.h  main.c  main.h  render.c  render.h  wayland.c  wayland.h  xdg-shell.h
